fix button spacing and add vt logo to prediction graph

--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -520,7 +520,12 @@ label
       align-items: start
   .button
     margin: 0
+
 .content.dashboard
+  
   .graph-controls
+    justify-content: center
     .columns.is-tablet
       justify-content: center
+      @media screen and (min-width: 540px)
+        justify-content: center
